Fix braces and spacing

--- a/app/stylesheets/boilerplate/header.scss
+++ b/app/stylesheets/boilerplate/header.scss
@@ -6,8 +6,11 @@
 .header {
   padding-left: $header-common-margin;
   padding-right: $header-common-margin;
+
   .logo {
-    float: left;}
+    float: left;
+  }
+
   .header-nav {
     float: right;
     margin-top: $nav-top-position;
